# PhysicsSimulation

./: CMakeLists.txt  Makefile
include/glad/: glad.h
src/: glad.c  main.cpp  particle.cu
